--- a/SyncUp/pom.xml
+++ b/SyncUp/pom.xml
@@ -95,13 +95,13 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>co.edu.uniquindio.syncup.SyncUpApp</mainClass>
-                    <launcher>app</launcher>
-                    <jlinkZipName>app</jlinkZipName>
-                    <jlinkImageName>app</jlinkImageName>
-                    <noManPages>true</noManPages>
-                    <stripDebug>true</stripDebug>
-                    <noHeaderFiles>true</noHeaderFiles>
                 </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
             </plugin>
 
         </plugins>
