--- a/SyncUp/pom.xml
+++ b/SyncUp/pom.xml
@@ -44,6 +44,24 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.9.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -74,10 +92,6 @@
                     <noHeaderFiles>true</noHeaderFiles>
                 </configuration>
             </plugin>
-<<<<<<< Updated upstream
-
-=======
->>>>>>> Stashed changes
         </plugins>
     </build>
 </project>
